# oracle

./: .env  Cargo.toml  README.md
docs/: README.md  architecture.md  community.md  contributing.md  dependencies.md  license.md  overview.md  roadmap.md  setup.md  usage.md
src/: lib.rs  main.rs
src/data/: arcdotfun.rs  data_store.rs  solana_data.rs
src/llm/: agent.rs  prompt.rs  together_ai.rs
src/solana/: client.rs  storage.rs  transactions.rs
src/utils/: config.rs  error.rs  logging.rs
src/vector/: lancedb.rs  store.rs
