[dependencies]
rig = "0.1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "1.18"
solana-client = "1.18"
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }